--- a/grayscale_body/manifest.json
+++ b/grayscale_body/manifest.json
@@ -13,7 +13,10 @@
   "permissions": [
    "activeTab"
    ],
-   
+   "background": {
+    "scripts": ["background.js"],
+    "persistent": false
+  },
 
    "content_scripts": [
     {
